--- a/pom.xml
+++ b/pom.xml
@@ -23,13 +23,16 @@ under the License.
 	<groupId>org.example</groupId>
 	<artifactId>flink-demo-1.16</artifactId>
 	<version>1.0-SNAPSHOT</version>
-	<packaging>jar</packaging>
+	<packaging>pom</packaging>
 
-	<name>Flink Quickstart Job</name>
+	<name>flink-demo-1.16</name>
+	<modules>
+		<module>backend</module>
+	</modules>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<flink.version>1.16.1</flink.version>
+		<flink.version>1.16.0</flink.version>
 		<target.java.version>1.8</target.java.version>
 		<scala.binary.version>2.12</scala.binary.version>
 		<maven.compiler.source>${target.java.version}</maven.compiler.source>
@@ -53,54 +56,8 @@ under the License.
 	</repositories>
 
 	<dependencies>
-		<!-- Apache Flink dependencies -->
-		<!-- These dependencies are provided, because they should not be packaged into the JAR file. -->
-<!--		<dependency>-->
-<!--			<groupId>org.apache.flink</groupId>-->
-<!--			<artifactId>flink-streaming-java</artifactId>-->
-<!--			<version>${flink.version}</version>-->
-<!--&lt;!&ndash;			<scope>provided</scope>&ndash;&gt;-->
-<!--		</dependency>-->
-		<dependency>
-			<groupId>org.apache.flink</groupId>
-			<artifactId>flink-clients</artifactId>
-			<version>${flink.version}</version>
-<!--			<scope>provided</scope>-->
-		</dependency>
-		<dependency>
-			<groupId>org.apache.flink</groupId>
-			<artifactId>flink-table-api-java</artifactId>
-			<version>1.16.1</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.flink</groupId>
-			<artifactId>flink-table-api-java-bridge</artifactId>
-			<version>1.16.1</version>
-<!--			<scope>provided</scope>-->
-		</dependency>
-		<dependency>
-			<groupId>org.apache.flink</groupId>
-			<artifactId>flink-table-planner_2.12</artifactId>
-			<version>${flink.version}</version>
-<!--			<scope>provided</scope>-->
-		</dependency>
-		<dependency>
-			<groupId>org.apache.flink</groupId>
-			<artifactId>flink-streaming-scala_2.12</artifactId>
-			<version>1.16.1</version>
-<!--			<scope>provided</scope>-->
-		</dependency>
-		<dependency>
-			<groupId>org.apache.flink</groupId>
-			<artifactId>flink-connector-jdbc</artifactId>
-			<version>${flink.version}</version>
-		</dependency>
 
-		<dependency>
-			<groupId>com.mysql</groupId>
-			<artifactId>mysql-connector-j</artifactId>
-			<version>8.0.32</version>
-		</dependency>
+
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
