--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -1,15 +1,27 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.example</groupId>
-        <artifactId>flink-demo-1.16</artifactId>
+        <artifactId>flink-demo</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <artifactId>backend</artifactId>
     <name>Archetype - backend</name>
     <url>http://maven.apache.org</url>
-
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
+        <hutool.version>5.8.12</hutool.version>
+        <lombok.version>1.18.8</lombok.version>
+        <flink.version>1.17.0</flink.version>
+        <flink.jdbc.version>1.16.0</flink.jdbc.version>
+        <scala.binary.version>2.12</scala.binary.version>
+        <!--        <custom.scope>provided</custom.scope>-->
+        <custom.scope>compile</custom.scope>
+    </properties>
     <dependencies>
         <!-- Apache Flink dependencies -->
         <!-- These dependencies are provided, because they should not be packaged into the JAR file. -->
@@ -23,41 +35,44 @@
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-clients</artifactId>
             <version>${flink.version}</version>
-            <!--			<scope>provided</scope>-->
+            <scope>${custom.scope}</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-table-api-java</artifactId>
-            <version>1.16.1</version>
+            <version>${flink.version}</version>
+            <scope>${custom.scope}</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-table-api-java-bridge</artifactId>
-            <version>1.16.1</version>
-            <!--			<scope>provided</scope>-->
+            <version>${flink.version}</version>
+            <scope>${custom.scope}</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-table-planner_2.12</artifactId>
             <version>${flink.version}</version>
-            <!--			<scope>provided</scope>-->
+            <scope>${custom.scope}</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-streaming-scala_2.12</artifactId>
-            <version>1.16.1</version>
-            <!--			<scope>provided</scope>-->
+            <version>${flink.version}</version>
+            <scope>${custom.scope}</scope>
         </dependency>
 
         <dependency>
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-connector-jdbc</artifactId>
-            <version>${flink.version}</version>
+            <version>1.16.0</version>
+            <scope>${custom.scope}</scope>
         </dependency>
         <dependency>
-            <groupId>com.mysql</groupId>
-            <artifactId>mysql-connector-j</artifactId>
-            <version>8.0.32</version>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.28</version>
+            <scope>runtime</scope>
         </dependency>
 
         <dependency>
