--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -81,6 +81,21 @@
             <version>1.1.0-SNAPSHOT</version>
         </dependency>
 
+        <dependency>
+            <!-- please stop using ru.yandex.clickhouse as it's been deprecated -->
+            <groupId>com.clickhouse</groupId>
+            <artifactId>clickhouse-jdbc</artifactId>
+            <version>0.3.2-patch11</version>
+            <!-- use uber jar with all dependencies included, change classifier to http for smaller jar -->
+            <classifier>all</classifier>
+            <exclusions>
+                <exclusion>
+                    <groupId>*</groupId>
+                    <artifactId>*</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
     </dependencies>
 
 
