--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -96,11 +96,19 @@
             </exclusions>
         </dependency>
 
+
+        <dependency>
+            <groupId>com.ververica</groupId>
+            <artifactId>flink-connector-mysql-cdc</artifactId>
+            <version>3.0.1</version>
+            <scope>compile</scope>
+        </dependency>
+
     </dependencies>
 
 
     <build>
-        <finalName>xiaoi-bi-flink-process-graph</finalName>
+        <finalName>flink-demo</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -130,13 +138,6 @@
                                     </excludes>
                                 </filter>
                             </filters>
-                            <transformers>
-                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <!-- Replace this with the main class of your job -->
-                                    <mainClass>com.xiaoi.bi.flink.ProcessEntrance</mainClass>
-                                </transformer>
-                                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
-                            </transformers>
                         </configuration>
                     </execution>
                 </executions>
