--- a/cdc/pom.xml
+++ b/cdc/pom.xml
@@ -19,41 +19,53 @@
         <lombok.version>1.18.8</lombok.version>
         <flink.version>1.17.0</flink.version>
         <flink.jdbc.version>1.16.0</flink.jdbc.version>
-        <scala.binary.version>2.12</scala.binary.version>
-        <!--        <custom.scope>provided</custom.scope>-->
-        <custom.scope>compile</custom.scope>
+        <scala.version>2.12</scala.version>
+                <custom.scope>provided</custom.scope>
+<!--        <custom.scope>compile</custom.scope>-->
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.apache.flink</groupId>
-            <artifactId>flink-clients</artifactId>
+            <artifactId>flink-java</artifactId>
             <version>${flink.version}</version>
-            <scope>${custom.scope}</scope>
+<!--            <scope>provided</scope>-->
         </dependency>
         <dependency>
             <groupId>org.apache.flink</groupId>
-            <artifactId>flink-table-api-java</artifactId>
+            <artifactId>flink-clients</artifactId>
             <version>${flink.version}</version>
-            <scope>${custom.scope}</scope>
+<!--            <scope>${custom.scope}</scope>-->
+        </dependency>
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-streaming-java</artifactId>
+            <version>${flink.version}</version>
+<!--            <scope>provided</scope>-->
+        </dependency>
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-streaming-scala_${scala.version}</artifactId>
+            <version>${flink.version}</version>
+<!--            <scope>provided</scope>-->
         </dependency>
         <dependency>
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-table-api-java-bridge</artifactId>
             <version>${flink.version}</version>
-            <scope>${custom.scope}</scope>
+<!--            <scope>provided</scope>-->
         </dependency>
         <dependency>
             <groupId>org.apache.flink</groupId>
-            <artifactId>flink-table-planner_2.12</artifactId>
+            <artifactId>flink-table-planner_${scala.version}</artifactId>
             <version>${flink.version}</version>
-            <scope>${custom.scope}</scope>
+<!--            <scope>provided</scope>-->
         </dependency>
+
         <dependency>
             <groupId>org.apache.flink</groupId>
-            <artifactId>flink-streaming-scala_2.12</artifactId>
+            <artifactId>flink-connector-base</artifactId>
             <version>${flink.version}</version>
-            <scope>${custom.scope}</scope>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/com.ververica/flink-connector-mysql-cdc -->
@@ -61,7 +73,7 @@
             <groupId>com.ververica</groupId>
             <artifactId>flink-connector-mysql-cdc</artifactId>
             <version>2.4.2</version>
-            <scope>compile</scope>
+<!--            <scope>compile</scope>-->
         </dependency>
 
     </dependencies>
