--- a/cdc/pom.xml
+++ b/cdc/pom.xml
@@ -26,7 +26,8 @@
         <slf4j.version>1.7.15</slf4j.version>
         <log4j.version>2.17.1</log4j.version>
         <debezium.version>1.9.7.Final</debezium.version>
-        <custom.scope>provided</custom.scope>
+        <custom.scope>compile</custom.scope>
+<!--        <custom.scope>provided</custom.scope>-->
     </properties>
     <dependencies>
         <dependency>
@@ -225,7 +226,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>org.example.CDC_SQL</mainClass>
+                            <mainClass>org.example.AGG_SQL</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
